# Curator_Agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker_imge.yml
app/: __init__.py  container_sandbox.py  database_client.py  executor.py  main.py  models.py  performance_aware_executor.py  performance_intelligence.py  performance_policy.py  recommendations.py  registry.py  schema_contracts.py  schema_enforcing_executor.py  seed_skills.py  shadow_ensemble.py  system_contract.py  validator.py  version_api.py
docs/: API_CONTRACT.md  BACKTEST_APPROVAL_GATE.md
sandbox/: Dockerfile  runner.py
tests/: conftest.py  test_api.py  test_api_contract.py  test_backtest_gate.py  test_container_sandbox.py  test_deterministic_skill_seed.py  test_executor.py  test_performance_intelligence.py  test_performance_policy.py  test_shadow_ensemble.py  test_skill_schema_contracts.py  test_skill_versioning.py  test_validator.py  test_version_lifecycle_api.py
